<?xml version="1.0"?>
<package format="3">
  <name>chassis_enable</name>
  <version>0.1.0</version>
  <description>Relay /cmd_vel and enable chassis via service call</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>segway_msgs</exec_depend>

</package>
