<?xml version="1.0"?>
<package format="3">
  <name>chassis_enable</name>
  <version>0.1.0</version>
  <description>Relay /cmd_vel and enable chassis via service call</description>

  <maintainer email="your@email.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>segway_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
